@@ -26,10 +26,13 @@ import org.apache.solr.client.solrj.response.FacetField;
 
 import uk.org.llgc.annotation.store.data.PageAnnoCount;
 import uk.org.llgc.annotation.store.data.Manifest;
+import uk.org.llgc.annotation.store.data.Canvas;
 import uk.org.llgc.annotation.store.data.Annotation;
 import uk.org.llgc.annotation.store.data.SearchQuery;
 import uk.org.llgc.annotation.store.exceptions.IDConflictException;
 import uk.org.llgc.annotation.store.exceptions.MalformedAnnotation;
+import uk.org.llgc.annotation.store.adapters.solr.SolrManifestStore;
+import uk.org.llgc.annotation.store.adapters.solr.SolrUtils;
 
 import java.text.ParseException;
 
@@ -40,8 +43,6 @@ import java.util.ArrayList;
 import java.util.Set;
 import java.util.Base64;
 import java.util.Date;
-
-import javax.xml.bind.DatatypeConverter;
 
 import java.io.IOException;
 import java.io.BufferedReader;
@@ -54,6 +55,8 @@ public class SolrStore extends AbstractStoreAdapter implements StoreAdapter {
 	protected static Logger _logger = LogManager.getLogger(SolrStore.class.getName());
 
 	protected SolrClient _solrClient = null;
+    protected SolrManifestStore _manifestStore = null;
+    protected SolrUtils _utils = null;
 
 	public SolrStore(final String pConnectionURL, final String pCollection) {
 		if (pCollection == null || pCollection.trim().length() == 0) {
@@ -72,6 +75,8 @@ public class SolrStore extends AbstractStoreAdapter implements StoreAdapter {
 			_solrClient = new CloudSolrClient.Builder(tHosts).build();
 			((CloudSolrClient)_solrClient).setDefaultCollection(pCollection);
 		}
+        _manifestStore = new SolrManifestStore(_solrClient);
+        _utils = new SolrUtils(_solrClient);
 	}
 
 	public SolrClient getClient() {
@@ -84,8 +89,8 @@ public class SolrStore extends AbstractStoreAdapter implements StoreAdapter {
 
 		// Only index what is neccesary for searching, everything else goes into data
 		tDoc.addField("id", (String)pJson.get("@id"));
-		this.addMultiple(tDoc, "type",pJson.get("@type"));
-		this.addMultiple(tDoc, "motivation", pJson.get("motivation"));
+		_utils.addMultiple(tDoc, "type",pJson.get("@type"));
+		_utils.addMultiple(tDoc, "motivation", pJson.get("motivation"));
 		Date tCreated = null;
 		try {
 			if (pJson.get("created") != null) {
@@ -96,7 +101,7 @@ public class SolrStore extends AbstractStoreAdapter implements StoreAdapter {
 		} catch (ParseException tException) {
 			_logger.error("Failed to parse Created date");
 		}
-		this.addSingle(tDoc, "created", tCreated);
+		_utils.addSingle(tDoc, "created", tCreated);
 		Date tModified = null;
 		try {
 			if (pJson.get("modified") != null) {
@@ -108,16 +113,16 @@ public class SolrStore extends AbstractStoreAdapter implements StoreAdapter {
 			_logger.error("Failed to parse Modified date");
 		}
 
-		this.addSingle(tDoc, "modified", tModified);
+		_utils.addSingle(tDoc, "modified", tModified);
 		if (pJson.get("resource") != null) {
 			if (pJson.get("resource") instanceof List) {
 				List<Map<String,Object>> tMultpleBodies = (List<Map<String,Object>>)pJson.get("resource");
 				for (Map<String,Object> tBody : tMultpleBodies) {
-					this.addSingle(tDoc, "body", tBody.get("chars"));
+					_utils.addSingle(tDoc, "body", tBody.get("chars"));
 				}
 			} else {
 				Map<String, Object> tResouce = (Map<String,Object>)pJson.get("resource");
-				this.addSingle(tDoc, "body", tResouce.get("chars"));
+				_utils.addSingle(tDoc, "body", tResouce.get("chars"));
 			}
 		}
 		String tCanvasId = null;
@@ -131,16 +136,16 @@ public class SolrStore extends AbstractStoreAdapter implements StoreAdapter {
 			for (Map<String, Object> tOn : (List<Map<String,Object>>)pJson.get("on"))	{
 				// for each linked canvas add link to canvas and manifest
 				if (tOn.get("full") instanceof String) {
-					this.addSingle(tDoc, "target", tOn.get("full"));
+					_utils.addSingle(tDoc, "target", tOn.get("full"));
 				} else {
 					_logger.info("Probably have an invalid annotation ");
 					_logger.info(JsonUtils.toPrettyString(pJson));
 				}
-				this.addSingle(tDoc, "target", tOn.get("source"));
+				_utils.addSingle(tDoc, "target", tOn.get("source"));
 				if (tOn.get("selector") != null) { // index xywh in case in future you want to search within bounds
 					Map<String,Object> tSelector = (Map<String, Object>)tOn.get("selector");
 					if (tSelector.get("value") instanceof String) {
-						this.addSingle(tDoc, "selector", tSelector.get("value"));
+						_utils.addSingle(tDoc, "selector", tSelector.get("value"));
 					} else {
 						_logger.info("Probably have an invalid annotation ");
 						_logger.info(JsonUtils.toPrettyString(pJson));
@@ -154,55 +159,23 @@ public class SolrStore extends AbstractStoreAdapter implements StoreAdapter {
 					} else {
 						tWithinURi = (String)tOn.get("within");
 					}
-					this.addSingle(tDoc, "within", tWithinURi);
+					_utils.addSingle(tDoc, "within", tWithinURi);
 				} else {
 					_logger.debug("Missing canvas Id so couldn't find registered manifest");
 				}
 			}
 		}
 		String tJson = JsonUtils.toString(pJson);
-		//this.addSingle(tDoc, "data", Base64.getEncoder().encodeToString(tJson.getBytes("UTF-8")));
-		this.addSingle(tDoc, "data", DatatypeConverter.printBase64Binary(tJson.getBytes("UTF-8")));
+		_utils.addSingle(tDoc, "data", Base64.getEncoder().encodeToString(tJson.getBytes("UTF-8")));
+		//_utils.addSingle(tDoc, "data", DatatypeConverter.printBase64Binary(tJson.getBytes("UTF-8")));
 
-		this.addDoc(tDoc, true);
+		_utils.addDoc(tDoc, true);
 
 		return super.convertAnnoToModel(pJson);
 	}
 
-
-	public List<String> getManifestForCanvas(final String pCanvasId) throws IOException {
-		try {
-			SolrQuery tQuery = this.getQuery();
-			tQuery.set("q", "canvas:\"" + this.escapeChars(pCanvasId) + "\"");
-			QueryResponse tResponse = _solrClient.query(tQuery);
-			long tResultNo = tResponse.getResults().getNumFound();
-			int tPageSize = tResponse.getResults().size();
-			int tStart = 0;
-			List<String> tWithin = new ArrayList<String>();
-			do {
-				for (SolrDocument tResult : tResponse.getResults()) {
-					tWithin.add((String)tResult.get("id"));
-				}
-
-				tStart += tPageSize;
-				tQuery.setStart(tStart);
-				tResponse = _solrClient.query(tQuery);
-			} while (tStart < tResultNo);
-			if (tWithin.size() > 0) {
-				return tWithin;
-			} else {
-				return null;
-			}
-		} catch (SolrServerException tException) {
-			_logger.error("failed to find manifest for this canvas due to: " + tException.toString());
-			throw new IOException("Failed to find manifest for canvasid " + pCanvasId + " due to " + tException.toString());
-		}
-	}
-
-
-
 	public Map<String, Object> getAllAnnotations() throws IOException {
-		SolrQuery tQuery = this.getQuery();
+		SolrQuery tQuery = _utils.getQuery();
 		tQuery.set("q", "type:oa\\:Annotation");
 
 		Map<String,Object> tAnnoList = new HashMap<String,Object>();
@@ -231,133 +204,69 @@ public class SolrStore extends AbstractStoreAdapter implements StoreAdapter {
 
 	}
 
-	public List<Manifest> getManifests() throws IOException {
-		SolrQuery tQuery = this.getManifestQuery();
-		tQuery.set("q", "type:sc\\:Manifest");
+    public void linkupOrphanCanvas(final Manifest pManifest) throws IOException {
+        try {
+            for (Canvas tCanvas : pManifest.getCanvases()) {
+                // Update any annotations that link to this new Manifest
+                SolrQuery tQuery = _utils.getQuery();
+                tQuery.set("q", "target:\"" + _utils.escapeChars(tCanvas.getId()) + "\" AND NOT within:\"" + _utils.escapeChars(pManifest.getURI()) + "\"");
+                QueryResponse tResponse = _solrClient.query(tQuery);
+                long tResultNo = tResponse.getResults().getNumFound();
+                int tPageSize = tResponse.getResults().size();
+                int tStart = 0;
+                if (tPageSize == 0) {
+                    _logger.debug("no annotations to update");
+                } else {
+                    _logger.debug("Found " + tResponse.getResults().size() + " annotations to update with within");
+                    do {
+                        for (SolrDocument tResult : tResponse.getResults()) {
+                            Map<String,Object> tAnnoJson =  this.buildAnnotation(tResult, false);
 
-		List<Manifest> tManifests = new ArrayList<Manifest>();
-		try {
-			QueryResponse tResponse = _solrClient.query(tQuery);
-			long tResultNo = tResponse.getResults().getNumFound();
-			int tPageSize = tResponse.getResults().size();
-			int tStart = 0;
-			do {
-				for (SolrDocument tResult : tResponse.getResults()) {
-					Manifest tManifest = new Manifest();
-					tManifest.setURI((String)tResult.get("id"));
-					tManifest.setShortId((String)tResult.get("short_id"));
-					tManifest.setLabel(((List<String>)tResult.get("label")).get(0));
-					tManifests.add(tManifest);
-				}
+                            super.addWithin(tAnnoJson, pManifest.getURI(), tCanvas.getId());
 
-				tStart += tPageSize;
-				tQuery.setStart(tStart);
-				tResponse = _solrClient.query(tQuery);
-			} while (tStart < tResultNo);
-		} catch (SolrServerException tExcpt) {
-			tExcpt.printStackTrace();
-			throw new IOException("Failed to remove annotations due to " + tExcpt);
-		}
-		return tManifests;
+                            try {
+                                super.updateAnnotation(tAnnoJson);
+                            } catch (MalformedAnnotation tExcpt) {
+                                throw new IOException("Failed to reload annotation after updating the within: " + tExcpt);
+                            }
+                        }
+
+                        tStart += tPageSize;
+                        tQuery.setStart(tStart);
+                        tResponse = _solrClient.query(tQuery);
+                    } while (tStart < tResultNo);
+                }
+            }
+        } catch (SolrServerException tExcpt) {
+            String tMessage = "Failed to update canvases with link to manifest due to " + tExcpt.toString();
+            _logger.debug(tMessage);
+            throw new IOException(tMessage);
+        }
+    }
+
+
+
+	public List<String> getManifestForCanvas(final String pCanvasId) throws IOException {
+		return _manifestStore.getManifestForCanvas(pCanvasId);
 	}
 
+	public List<Manifest> getManifests() throws IOException {
+        return _manifestStore.getManifests();
+    }
 
 	protected String indexManifestNoCheck(final String pShortId, Map<String,Object> pManifest) throws IOException {
-		String tManifestId = (String)pManifest.get("@id");
-		SolrInputDocument tDoc = new SolrInputDocument();
-		tDoc.addField("short_id", pShortId);
-		tDoc.addField("id", tManifestId);
-		this.addSingle(tDoc, "label", pManifest.get("label"));
-		this.addMultiple(tDoc, "type", pManifest.get("@type"));
-		List<String> tCanvases = new ArrayList<String>();
-		for (Map<String,Object> tSequence : (List<Map<String,Object>>)pManifest.get("sequences")) {
-			for (Map<String,Object> tCanvas : (List<Map<String,Object>>)tSequence.get("canvases")) {
-				if (!tCanvases.contains((String)tCanvas.get("@id"))) {
-					tCanvases.add((String)tCanvas.get("@id"));
-					// Update any annotations that link to this new Manifest
-					SolrQuery tQuery = this.getQuery();
-					tQuery.set("q", "target:\"" + this.escapeChars((String)tCanvas.get("@id")) + "\" AND NOT within:\"" + this.escapeChars(tManifestId) + "\"");
-					try {
-						QueryResponse tResponse = _solrClient.query(tQuery);
-						long tResultNo = tResponse.getResults().getNumFound();
-						int tPageSize = tResponse.getResults().size();
-						int tStart = 0;
-						if (tPageSize == 0) {
-							_logger.debug("no annotations to update");
-						} else {
-							_logger.debug("Found " + tResponse.getResults().size() + " annotations to update with within");
-							do {
-								for (SolrDocument tResult : tResponse.getResults()) {
-									Map<String,Object> tAnnoJson =  this.buildAnnotation(tResult, false);
+        Manifest tManifest = new Manifest(pManifest, pShortId);
+        _manifestStore.indexManifestNoCheck(tManifest);
+        this.linkupOrphanCanvas(tManifest);
+        return tManifest.getShortId();
+    }
 
-                                    String tCanvasId = (String)tCanvas.get("@id");
-                    				super.addWithin(tAnnoJson, tManifestId, tCanvasId);
-
-                                    try {
-    									super.updateAnnotation(tAnnoJson);
-                                    } catch (MalformedAnnotation tExcpt) {
-                                        throw new IOException("Failed to reload annotation after updating the within: " + tExcpt);
-                                    }
-								}
-
-								tStart += tPageSize;
-								tQuery.setStart(tStart);
-								tResponse = _solrClient.query(tQuery);
-							} while (tStart < tResultNo);
-						}
-					} catch (SolrServerException tExcpt) {
-						String tMessage = "Failed to update canvases with link to manifest due to " + tExcpt.toString();
-						_logger.debug(tMessage);
-						throw new IOException(tMessage);
-					}
-
-				}
-			}
-		}
-		this.addMultiple(tDoc, "canvas", tCanvases);
-
-		this.addDoc(tDoc, true);
-
-		// Now need to search for all canvases and add the within link
-		return pShortId;
-	}
 	public String getManifestId(final String pShortId) throws IOException {
-		SolrQuery tQuery = this.getQuery();
-		tQuery.set("q", "short_id:" + this.escapeChars(pShortId));
-
-		try {
-			QueryResponse tResponse  = _solrClient.query(tQuery);
-
-			if (tResponse.getResults().size() == 1) {
-				return (String)tResponse.getResults().get(0).get("id");
-			} else if (tResponse.getResults().size() == 0) {
-				return null; // no annotation found with supplied id
-			} else {
-				throw new IOException("Found " + tResponse.getResults().size() + " manifests with ID " + pShortId);
-			}
-		} catch (SolrServerException tException) {
-			throw new IOException("Failed to run solr query due to " + tException.toString());
-		}
+		return _manifestStore.getManifestId(pShortId);
 	}
-	public Map<String,Object> getManifest(final String pShortId) throws IOException {
-		SolrQuery tQuery = this.getQuery();
 
-		tQuery.set("q", "short_id:" + this.escapeChars(pShortId));
-
-		try {
-			QueryResponse tResponse  = _solrClient.query(tQuery);
-
-			if (tResponse.getResults().size() == 1) {
-				Map<String, Object> tAnnotation = this.buildManifest(tResponse.getResults().get(0));
-				return tAnnotation;
-			} else if (tResponse.getResults().size() == 0) {
-				return null; // no annotation found with supplied id
-			} else {
-				throw new IOException("Found " + tResponse.getResults().size() + " manifests with ID " + pShortId);
-			}
-		} catch (SolrServerException tException) {
-			throw new IOException("Failed to run solr query due to " + tException.toString());
-		}
+	public Manifest getManifest(final String pShortId) throws IOException {
+		return _manifestStore.getManifest(pShortId);
 	}
 
 	public void deleteAnnotation(final String pAnnoId) throws IOException {
@@ -396,7 +305,7 @@ public class SolrStore extends AbstractStoreAdapter implements StoreAdapter {
 		tSolrQuery.append(pQuery.getScope());
 		tSolrQuery.append("\"");
 
-		SolrQuery tQuery = this.getQuery();
+		SolrQuery tQuery = _utils.getQuery();
 		tQuery.set("q", tSolrQuery.toString());
 		tQuery.setStart(pQuery.getPage() * pQuery.getResultsPerPage());
 		tQuery.setRows(pQuery.getResultsPerPage());
@@ -448,8 +357,8 @@ public class SolrStore extends AbstractStoreAdapter implements StoreAdapter {
 	}
 
 	public List<Model> getAnnotationsFromPage(final String pPageId) throws IOException {
-		SolrQuery tQuery = this.getQuery();
-		tQuery.set("q", "target:" + this.escapeChars(pPageId));
+		SolrQuery tQuery = _utils.getQuery();
+		tQuery.set("q", "target:" + _utils.escapeChars(pPageId));
 
 		try {
 			QueryResponse tResponse = _solrClient.query(tQuery);
@@ -474,10 +383,11 @@ public class SolrStore extends AbstractStoreAdapter implements StoreAdapter {
 			throw new IOException("Failed to run solr query due to " + tException.toString());
 		}
 	}
-	protected Model getNamedModel(final String pContext) throws IOException {
-		SolrQuery tQuery = this.getQuery();
 
-		tQuery.set("q", "id:" + this.escapeChars(pContext));
+	protected Model getNamedModel(final String pContext) throws IOException {
+		SolrQuery tQuery = _utils.getQuery();
+
+		tQuery.set("q", "id:" + _utils.escapeChars(pContext));
 
 		try {
 			QueryResponse tResponse  = _solrClient.query(tQuery);
@@ -509,7 +419,7 @@ public class SolrStore extends AbstractStoreAdapter implements StoreAdapter {
             FacetField tFacetCounts = tResponse.getFacetField("target");
             List<PageAnnoCount> tAnnoPageCount = new ArrayList<PageAnnoCount>();
             for (FacetField.Count tFacetValue : tFacetCounts.getValues()) {
-                tAnnoPageCount.add(new PageAnnoCount(tFacetValue.getName(), (int)tFacetValue.getCount()));
+                tAnnoPageCount.add(new PageAnnoCount(tFacetValue.getName(), (int)tFacetValue.getCount(), pManifest.getCanvas(tFacetValue.getName()).getLabel(), pManifest)); // TODO add canvas label
             }
             return tAnnoPageCount;
         } catch (SolrServerException tExcept) {
@@ -517,6 +427,7 @@ public class SolrStore extends AbstractStoreAdapter implements StoreAdapter {
             throw new IOException("Failed to run page count query due to " + tExcept.getMessage());
         }
     }    
+
 	public List<PageAnnoCount> listAnnoPages() throws IOException {
         SolrQuery tQuery = new SolrQuery();
         tQuery.setRows(0);
@@ -531,7 +442,7 @@ public class SolrStore extends AbstractStoreAdapter implements StoreAdapter {
             FacetField tFacetCounts = tResponse.getFacetField("target");
             List<PageAnnoCount> tAnnoPageCount = new ArrayList<PageAnnoCount>();
             for (FacetField.Count tFacetValue : tFacetCounts.getValues()) {
-                tAnnoPageCount.add(new PageAnnoCount(tFacetValue.getName(), (int)tFacetValue.getCount()));
+                tAnnoPageCount.add(new PageAnnoCount(tFacetValue.getName(), (int)tFacetValue.getCount(), "", null)); // TODO add manifest and canvas label
             }
             return tAnnoPageCount;
         } catch (SolrServerException tExcept) {
@@ -540,96 +451,9 @@ public class SolrStore extends AbstractStoreAdapter implements StoreAdapter {
         }
 	}
 
-	// Solr Helper methods
-	protected void addDoc(final SolrInputDocument pDoc, final boolean pCommit) throws IOException {
-		try {
-			UpdateResponse tResponse = _solrClient.add(pDoc);
-
-			if (pCommit) {
-				_solrClient.commit();
-			}
-		} catch (SolrServerException tExcpt) {
-			tExcpt.printStackTrace();
-			throw new IOException("Failed to remove annotations due to " + tExcpt);
-		}
-	}
-
-
-	protected void addSingle(final SolrInputDocument pDoc, final String pKey, final Object pObject) {
-		if (pObject != null) {
-			if (pObject instanceof String) {
-				pDoc.addField(pKey, (String)pObject);
-			} else {
-				pDoc.addField(pKey, pObject);
-			}
-		}
-	}
-
-	protected void addMultiple(final SolrInputDocument pDoc, final String pKey, final Object pObject) {
-		if (pObject != null) {
-			if (pObject instanceof List) {
-				for (String tValue: (List<String>)pObject) {
-					pDoc.addField(pKey, tValue);
-				}
-			} else {
-				pDoc.addField(pKey, (String)pObject);
-			}
-		}
-	}
-
-	protected SolrQuery getManifestQuery() {
-		SolrQuery tQuery = new SolrQuery();
-		tQuery.setFields("id", "type", "short_id", "label", "canvas");
-		tQuery.setRows(1000);
-
-		return tQuery;
-	}
-
-	protected SolrQuery getQuery() {
-		SolrQuery tQuery = new SolrQuery();
-		tQuery.setFields("id", "type", "motivation","body", "target","selector", "short_id", "within", "data", "canvas");
-		tQuery.setRows(1000);
-
-		return tQuery;
-	}
-
-	protected String escapeChars(final String pParam) {
-		return pParam.replaceAll(":","\\\\:");
-	}
-
-	protected boolean isType(final SolrDocument pResult, final String pType) {
-		if (pResult.get("type") != null) {
-			if (pResult.get("type") instanceof List) {
-				List<String> tTypes = (List<String>)pResult.get("type");
-				return tTypes.contains(pType);
-			} else {
-				return ((String)pResult.get("type")).equals(pType);
-			}
-		} else {
-			return false;
-		}
-	}
-
-	// Build helpers to convert from SOLR to annotation
-	protected Map<String,Object> buildManifest(final SolrDocument pDoc) {
-		Map<String,Object> tManifest = new HashMap<String,Object>();
-
-		tManifest.put("@id", (String)pDoc.get("id"));
-		tManifest.put("short_id", (String)pDoc.get("short_id"));
-		tManifest.put("label", (String)pDoc.get("label"));
-		this.createItemListIfMultiple(tManifest, "@type", pDoc.get("type"));
-		List tSequence = new ArrayList();
-		tManifest.put("sequences",tSequence);
-		Map<String,Object> tFirstSequence = new HashMap<String,Object>();
-		tSequence.add(tFirstSequence);
-		this.createItemList(tFirstSequence, "canvases", pDoc.get("canvases"));
-
-		return tManifest;
-	}
-
-	protected Map<String,Object> buildAnnotation(final SolrDocument pDoc, final boolean pCollapseOn) throws IOException {
-		Map<String,Object> tAnnotation = (Map<String,Object>)JsonUtils.fromString(new String(DatatypeConverter.parseBase64Binary((String)pDoc.get("data"))));
-		//Map<String,Object> tAnnotation = (Map<String,Object>)JsonUtils.fromString(new String(Base64.getDecoder().decode((String)pDoc.get("data"))));
+	public Map<String,Object> buildAnnotation(final SolrDocument pDoc, final boolean pCollapseOn) throws IOException {
+		//Map<String,Object> tAnnotation = (Map<String,Object>)JsonUtils.fromString(new String(DatatypeConverter.parseBase64Binary((String)pDoc.get("data"))));
+		Map<String,Object> tAnnotation = (Map<String,Object>)JsonUtils.fromString(new String(Base64.getDecoder().decode((String)pDoc.get("data"))));
 
 		if (pCollapseOn) {
 			_annoUtils.colapseFragement(tAnnotation);
@@ -638,42 +462,7 @@ public class SolrStore extends AbstractStoreAdapter implements StoreAdapter {
 		return tAnnotation;
 	}
 
-	protected void addSingleJson(final Map<String,Object> pParent, final String pKey, final Object pValue) {
-		if (pValue != null) {
-			pParent.put(pKey, (String)pValue);
-		}
-	}
-
-	protected void createItemListIfMultiple(final Map<String,Object> pParent, final String pKey, final Object pValue) {
-		if (pValue != null) {
-			if (pValue instanceof List) {
-				List<String> tValues = (List<String>)pValue;
-				if (tValues.size() == 1) {
-					pParent.put(pKey, tValues.get(0));
-				} else {
-					this.createItemList(pParent, pKey, pValue);
-				}
-			} else {
-				pParent.put(pKey, (String)pValue);
-			}
-		}
-	}
-
-	protected void createItemList(final Map<String,Object> pParent, final String pKey, final Object pValue) {
-		if (pValue != null) {
-			List<String> tList = new ArrayList<String>();
-			if (pValue instanceof List) {
-				for (String tValueInst : (List<String>)pValue) {
-					tList.add(tValueInst);
-				}
-			} else {
-				tList.add((String)pValue);
-			}
-			pParent.put(pKey, tList);
-		}
-	}
-
-	protected List<Map<String,Object>> buildAnnotationList(final QueryResponse pResponse, final boolean pCollapseOn) throws IOException {
+	public List<Map<String,Object>> buildAnnotationList(final QueryResponse pResponse, final boolean pCollapseOn) throws IOException {
 		List<Map<String,Object>> tResults = new ArrayList<Map<String,Object>>();
 		for (SolrDocument tResult : pResponse.getResults()) {
             Map<String, Object> tAnno = this.buildAnnotation(tResult, pCollapseOn);
@@ -692,4 +481,6 @@ public class SolrStore extends AbstractStoreAdapter implements StoreAdapter {
 
 		return tResults;
 	}
+
+
 }
